syntax = "proto3";

import "value.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "DocumentResultProto";
option go_package = "polypheny.com/protos";

package polypheny.protointerface;

message DocumentFrame {
  repeated ProtoDocument documents = 1;
}